# anoma

./: Makefile
apps/: Cargo.toml
apps/src/lib/: cli.rs
apps/src/lib/client/: gossip.rs  utils.rs
matchmaker/mm_template/: Cargo.toml
matchmaker/mm_template/src/: lib.rs
shared/: Cargo.toml
shared/src/types/: intent.rs
wasm/: checksums.json
wasm/tx_template/src/: lib.rs
