[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Anoma matchmaker template for a custom matchmaker implementation"
edition = "2021"
license = "GPL-3.0"
name = "mm_template"
readme = "../../README.md"
resolver = "2"
version = "0.4.0"

[lib]
crate-type = ["dylib"]

[features]
default = ["ABCI"]

ABCI = ["anoma/ABCI"]

[dependencies]
anoma = {path = "../../shared", default-features = false}
anoma_macros = {path = "../../macros"}
borsh = "0.9.0"
sha2 = "0.10.1"
base64 = "0.13.0"
good_lp = {version = "*", features = ["minilp"], default-features = false}
petgraph = {version = "0.5.1", features = ["serde-1"]}
rust_decimal = {version = "1.14.3"}
serde = {version = "1.0.125"}
serde_json = {version = "1.0.64"}
tokio = {version = "1.15.0", features = ["sync"]}
